kustomize/overlays/prod/gateway.yaml
# Production Environment Istio Gateway and VirtualService
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prod-gateway
  namespace: microservices-prod
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-prod
  namespace: microservices-prod
spec:
  hosts:
  - "*"
  gateways:
  - prod-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: frontend.microservices-prod.svc.cluster.local
        port:
          number: 80
